--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
             <!------------------------->
 <!--.......HEADER.........-->
         <header class="header">
-            <nav class="navigation" >
-                <div class="navigation__fixed">
+            <nav class="navigation navigation__fixed" id="nav">
+<!--                <div class="navigation__fixed">-->
                     <div class="header__logo-box">
-                        <img src="img/logo.png" alt="logo of site" class="header__logo-pic">
+                        <img src="img/logo.png" alt="logo of site" class="header__logo-pic" id="logo">
                     </div>
                     <!--.......TOGGLE PART.........-->
-                    <div class="navigation__toggle"><i class="fa fa-bars"></i></div>
-                    <ul class="navigation__list" id="nav">
+<!--                    <div class="navigation__toggle"><i class="fa fa-bars"></i></div>-->
+                    <ul class="navigation__list" id="list">
                         <li class="navigation__item"><a href="#" class="navigation__link current-page">home</a></li>
                         <li class="navigation__item"><a href="#" class="navigation__link">about us</a></li>
                         <li class="navigation__item"><a href="#" class="navigation__link">products</a></li>
@@ -36,7 +36,7 @@
                         <li class="navigation__item"><a href="#" class="navigation__link">applications</a></li>
                         <li class="navigation__item"><a href="#" class="navigation__link">contact</a></li>
                     </ul>
-                </div>
+<!--                </div>-->
             </nav>
 
             <div class="header__text">
